External/Releases/A/6-100/V2024.04.25/Body/README.md

***

# 4 year anniversary update (Beta 35, 2024, Thursday, April 25th)

**Tag:** `V2024.04.25`

**Released on:** `2024, Thursday, April 25th at 10:44 pm PST`

***Pre-release***

This is the 35th version of the 4 year anniversary update beta. The full release will be created on 2024, Saturday, May 25th. This is the thirty-third beta release to be tagged. In the future, I plan to tag the first 3 betas, I just don't know how to right now. These updates should continue daily for a while.

Small changes were made again today, as I had less time. Not much is required for some updates, it is a profile, after all. Today, a raster version of a bitmap image was added, and most remaining Markdown styled links were replaced with HTML styled links, with 9 exceptions.

I am still also in the planning phase of a major update (involving my system setup)

| 📣️ Feedback 💬️ |
|---|
| [`Give feedback on Mastodon`](https://techhub.social/deck/@seanpm2001/112237731368032617) |
| [:octocat: `Give feedback on GitHub`](https://github.com/seanpm2001/seanpm2001/discussions/106/) |

---

## What's Changed (manually written by @seanpm2001)

- **Archives:**
- - Archived data for release 34
- - Archived data for discussion 105
- - Archived files related to the 34th remodel
- - No other archived file changes
- **README:**
- - Updated README to version 109 (beta 35)
- - No other updates to the main README file
- **New media:**
- - Added a PNG and a JPG version of the MEDOS Beta 4 album (BMP)
- - No other new media files
- **Segments:**
- - Updated segment file for the `GitHub Stats A` section
- - No other segment data
- **Other:**
- - No other changes

***
