External/Releases/A/6-100/V2024.04.26/Body/README.md

***

# 4 year anniversary update (Beta 36, 2024, Friday, April 26th)

**Tag:** `V2024.04.26`

**Released on:** `2024, Friday, April 26th at 02:26 pm PST`

***Pre-release***

This is the 356h version of the 4 year anniversary update beta. The full release will be created on 2024, Saturday, May 25th. This is the thirty-fourth beta release to be tagged. In the future, I plan to tag the first 3 betas, I just don't know how to right now. These updates should continue daily for a while.

Todays update was published very early in the day. Small changes were made again today, as I didn't feel like spending much time here today. Not much is required for some updates, it is a profile, after all. Today, the index was updated, and a section about certifications was added, as I finally got the pictures I needed.

I am still also in the planning phase of a major update (involving my system setup)

| 📣️ Feedback 💬️ |
|---|
| [`Give feedback on Mastodon`](https://techhub.social/deck/@seanpm2001/112237731368032617) |
| [:octocat: `Give feedback on GitHub`](https://github.com/seanpm2001/seanpm2001/discussions/107/) |

---

## What's Changed (manually written by @seanpm2001)

- **Archives:**
- - Archived data for release 35
- - Archived data for discussion 106
- - Archived files related to the 36th remodel <!-- This number should be 1 higher than release 35, and should match the README beta version) !-->
- - No other archived file changes
- **README:**
- - Updated README to version 110 (beta 36)
- - No other updates to the main README file
- **New media:**
- - Added 5 images regarding my Microsoft Office certifications
- - No other new media files
- **Segments:**
- - Added segment file for the `Certifications` section
- - No other segment data
- **Other:**
- - No other changes

***
